--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "cookie": "^0.6.0",
     "js-cookie": "^3.0.5",
     "next": "14.2.3",
+    "qrcode.react": "^3.1.0",
     "react": "^18",
     "react-dom": "^18"
   },
